--- a/WordPress/Classes/ViewRelated/Activity/Activity.storyboard
+++ b/WordPress/Classes/ViewRelated/Activity/Activity.storyboard
@@ -101,7 +101,7 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qzN-1h-59z">
                                                         <rect key="frame" x="0.0" y="0.5" width="343" height="44"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="44" id="NG0-1F-qwe"/>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="NG0-1F-qwe"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                         <color key="tintColor" red="0.0" green="0.66666666669999997" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
