Adds a new class to resolve a sizing issue with an image in the pages list.

--- a/WordPress/Classes/ViewRelated/Pages/PageListTableViewCell.xib
+++ b/WordPress/Classes/ViewRelated/Pages/PageListTableViewCell.xib
@@ -22,30 +22,30 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6l3-mv-Tbu" userLabel="Labels">
-                        <rect key="frame" x="16" y="8" width="186.5" height="44"/>
+                        <rect key="frame" x="16" y="8" width="188.5" height="44"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S9J-0t-GbV">
-                                <rect key="frame" x="0.0" y="0.0" width="186.5" height="19"/>
+                                <rect key="frame" x="0.0" y="0.0" width="188.5" height="24"/>
                                 <fontDescription key="fontDescription" name="NotoSerif-Bold" family="Noto Serif" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xDu-Qf-38X" userLabel="BottomLabels">
-                                <rect key="frame" x="0.0" y="21" width="186.5" height="23"/>
+                                <rect key="frame" x="0.0" y="26" width="188.5" height="18"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="6 days ago •" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s9t-JC-dzu">
-                                        <rect key="frame" x="0.0" y="0.0" width="86" height="23"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="86" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" horizontalCompressionResistancePriority="749" text="Posts Page" textAlignment="natural" lineBreakMode="tailTruncation" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s1k-m6-54I">
-                                        <rect key="frame" x="110" y="0.0" width="76.5" height="23"/>
+                                        <rect key="frame" x="112" y="0.0" width="76.5" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="woP-g8-6RQ" customClass="CachedAnimatedImageView" customModule="WordPress" customModuleProvider="target">
-                                        <rect key="frame" x="90" y="3.5" width="16" height="16"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="woP-g8-6RQ" customClass="FixedSizeImageView" customModule="WordPress" customModuleProvider="target">
+                                        <rect key="frame" x="90" y="0.0" width="18" height="18"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="woP-g8-6RQ" secondAttribute="height" multiplier="1:1" id="cZt-Vh-3bN"/>
@@ -58,7 +58,7 @@
                                     <constraint firstItem="s1k-m6-54I" firstAttribute="leading" secondItem="woP-g8-6RQ" secondAttribute="trailing" constant="4" id="1te-ed-JRy"/>
                                     <constraint firstAttribute="bottom" secondItem="s1k-m6-54I" secondAttribute="bottom" id="3sS-fd-Nqp"/>
                                     <constraint firstAttribute="bottom" secondItem="s9t-JC-dzu" secondAttribute="bottom" id="CHe-Hx-ZZS"/>
-                                    <constraint firstItem="s9t-JC-dzu" firstAttribute="baseline" secondItem="woP-g8-6RQ" secondAttribute="bottom" id="KUW-e7-Eol"/>
+                                    <constraint firstItem="s9t-JC-dzu" firstAttribute="bottom" secondItem="woP-g8-6RQ" secondAttribute="bottom" id="KUW-e7-Eol"/>
                                     <constraint firstAttribute="trailing" secondItem="s1k-m6-54I" secondAttribute="trailing" id="b5q-O9-5WV"/>
                                     <constraint firstItem="woP-g8-6RQ" firstAttribute="leading" secondItem="s9t-JC-dzu" secondAttribute="trailing" constant="4" id="bRn-b2-vuI"/>
                                     <constraint firstItem="s9t-JC-dzu" firstAttribute="top" secondItem="xDu-Qf-38X" secondAttribute="top" id="hrq-w2-vZo"/>
