--- a/WordPress/Classes/ViewRelated/Reader/Detail/Views/ReaderDetailLikesView.xib
+++ b/WordPress/Classes/ViewRelated/Reader/Detail/Views/ReaderDetailLikesView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -52,6 +52,13 @@
                                 <constraint firstAttribute="width" secondItem="Fsb-ih-Vxd" secondAttribute="height" multiplier="1:1" id="RMT-Xw-wR0"/>
                             </constraints>
                         </imageView>
+                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gravatar" translatesAutoresizingMaskIntoConstraints="NO" id="Pod-MR-Wzr" userLabel="Self Avatar Image View" customClass="CircularImageView" customModule="WordPress" customModuleProvider="target">
+                            <rect key="frame" x="148" y="0.0" width="32" height="32"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="Pod-MR-Wzr" secondAttribute="height" multiplier="1:1" id="a3o-uv-Xqr"/>
+                                <constraint firstAttribute="width" constant="32" id="mtM-Ff-eOI"/>
+                            </constraints>
+                        </imageView>
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="height" constant="32" id="deH-0r-cgY"/>
@@ -78,6 +85,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="avatarStackView" destination="ZiQ-mD-QJO" id="hMm-un-1IW"/>
+                <outlet property="selfAvatarImageView" destination="Pod-MR-Wzr" id="jSJ-DS-UWW"/>
                 <outlet property="summaryLabel" destination="ilc-NW-l0X" id="C48-jT-Uq7"/>
             </connections>
             <point key="canvasLocation" x="-1275.3623188405797" y="-395.75892857142856"/>
